<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginActivity">

    <data>

        <variable
            name="viewModel"
            type="com.example.studyapplication.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.98" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iv_login"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            style="@style/textTitleYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/titleLogin"
            app:layout_constraintBottom_toTopOf="@+id/tv_make_login"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/iv_login" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_make_login"
            style="@style/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionLogin"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/textInputLayout"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/til_password"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_make_login"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/textInputLayout"
            android:layout_margin="8dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@+id/tv_forget_password"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_forget_password"
            style="@style/textRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/forgetPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <com.example.studyapplication.common.ProgressButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_register"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_forget_password"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintVertical_chainStyle="packed"
            app:progress_button_loading_title="@string/title_loading_button"
            app:progress_button_title="@string/title_button" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_register"
            style="@style/textRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/registerLoginScreen"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:elevation="1dp"
            android:text="Registre-se"
            android:textColor="@color/yellow"
            app:layout_constraintEnd_toEndOf="@+id/tv_register"
            app:layout_constraintStart_toStartOf="@+id/tv_register"
            app:layout_constraintTop_toBottomOf="@+id/tv_register"
            app:strokeColor="@color/yellow"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>